--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.2.1", features = ["derive"] }
+crossbeam-channel = "0.5.8"
 reqwest = { version = "0.11.16", features = ["blocking"] }
 scraper = "0.15.0"
+thiserror = "1.0.40"
